250818 - 영화 상세페이지 수정